--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Mrpowerup\\FilamentSqlField\\": "src/"
+            "MrPowerUp\\FilamentSqlField\\": "src/"
         }
     },
     "autoload-dev": {
