--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "keywords": [
         "MrPowerUp",
         "laravel",
+        "filament",
         "filament-sql-field"
     ],
     "authors": [
