--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
     "require": {
         "php": "^8.1",
         "filament/forms": "^3.0",
-        "spatie/laravel-package-tools": "^1.15.0"
+        "spatie/laravel-package-tools": "^1.15.0",
+        "pxlrbt/filament-excel": "^2.3"
+
     },
     "require-dev": {
         "laravel/pint": "^1.0",
