--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,7 @@
     "require": {
         "php": "^8.2",
         "filament/forms": "^4.0",
-        "spatie/laravel-package-tools": "^1.15.0",
-        "pxlrbt/filament-excel": "^2.5"
-
+        "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
